[tool.poetry]
name = "qm-sim-py"
version = "0.1.0"
description = ""
authors = ["reinanbr <perseu912@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
animatplot = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
